@@ -1,3 +1,15 @@
+2013-11-08  Sam Weinig  <sam@webkit.org>
+
+        Teach CanvasObserver about references
+        https://bugs.webkit.org/show_bug.cgi?id=124082
+
+        Reviewed by Anders Carlsson.
+
+        * css/CSSCanvasValue.cpp:
+        * css/CSSCanvasValue.h:
+        * html/HTMLCanvasElement.cpp:
+        * html/HTMLCanvasElement.h:
+
 2013-11-08  Anders Carlsson  <andersca@apple.com>
 
         Begin stubbing out a KeyedEncoder class in WebCore
